// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY bJYbJY"
      disabled={true}
      placeholder=" "
      type="number"
      value="123"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY hHcrTT"
      disabled={true}
      placeholder=" "
      type="number"
      value="123"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY eXjCzV"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY hwQQmu"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY eoItVF"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY fMisCP"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY bJYbJY"
      placeholder=" "
      readOnly={true}
      type="number"
      value="1234"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY hHcrTT"
      placeholder=" "
      readOnly={true}
      type="number"
      value="1234"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY eXjCzV"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY bJYbJY"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY hHcrTT"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY eXjCzV"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY bJYbJY"
      placeholder="e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY hHcrTT"
      placeholder="e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY eXjCzV"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-eZceyY bJYbJY"
      dir="rtl"
      placeholder="e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-eZceyY hHcrTT"
      dir="rtl"
      placeholder="e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY eXjCzV"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-erijoS kPCrAG"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <input
      className="sc-eZceyY bJYbJY"
      placeholder="medium e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <input
      className="sc-eZceyY hHcrTT"
      placeholder="large e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY ggLXng"
        placeholder="xlarge e.g. 1234"
        type="number"
      />
      <label
        className="sc-erijoS htSbIl"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY eShgTj"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY bbUiDo"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP kJWjmt"
    >
      <input
        className="sc-eZceyY eXjCzV"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
